--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.edu.hitsz.application'
+    id 'com.android.application'
 }
 
 android {
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.aircraftwar"
-        minSdk 28
+        minSdk 24
         targetSdk 32
         versionCode 1
         versionName "1.0"
